# incolume.py.fastapi.crud1

./: README.md  main.py  pyproject.toml
coverage_report/: cov.xml
incolume/py/fastapi/crud1/: server.py
tests/: conftest.py  test_server.py
